<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kinokuniya</string>
    <string name="action_settings">Settings</string>
    <string name="company_title">Kinokuniya Malaysia Sdn, Bhd.</string>
    <string name="search_label">Search: </string>
    <string name="search_button_label">Search</string>
    <string name="kinokuniya_logo_desc">Kinokuniya_Logo</string>
    <string name="title_activity_more__options">More_Options</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_updates">News Updates : </string>
    <string name="more_option">More...</string>
    <string name="login_label">[employee]</string>
    <string name="login">Login</string>
    <string name="rights">© 2004 - 2014 Kinokuniya. All Rights Reserved.</string>
    <string name="title_activity_login">Login</string>
    <string name="menu_nav">Menu Navigation:</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="title_activity_view__profile">View Profile</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_view_salary">ViewSalary</string>
    <string name="title_activity_view_news">ViewNews</string>
    <string name="title_activity_email_hr">EmailHR</string>
    <string name="title_activity_quit_job">QuitJob</string>
    <string name="title_activity_search_result">SearchResult</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_choose_city">ChooseCity</string>
    <string name="current">:: Current Time ::</string>

    <string-array name="items">
        <item></item>
        <item>Kuala Lumpur</item>
        <item>Austin, Texas</item>
        <item>London, UK</item>
        <item>Tokoyo, Japan</item>
        <item>South Africa, Cape-Town</item>
    </string-array>

    <string name="title_activity_time_zone">TimeZone</string>
    <string name="title_activity_time_z">TimeZone</string>
    <string name="title_activity_your_graph">YourGraph</string>

</resources>
