<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.newthinktank.kinokuniya.MoreOptions" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginBottom="2sp"
        android:contentDescription="@string/kinokuniya_logo_desc"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/companyTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/kinokuniya_color"
        android:text="@string/company_title"
        android:textColor="@color/white"
        android:textSize="@dimen/company_title_text_size" />

    <TextView
        android:id="@+id/empid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/menu_nav" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="190dp"
         android:layout_marginTop="5dp" 
        android:layout_marginBottom="5dp"
        android:background="@color/egg_shell" >

    </ListView>

    <TextView
        android:id="@+id/values_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/rights"
        android:textSize="@dimen/rights_text_size" />

</TableLayout>