<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.newthinktank.kinokuniya.TimeZ" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:contentDescription="@string/kinokuniya_logo_desc"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/companyTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/kinokuniya_color"
        android:text="@string/company_title"
        android:textColor="@color/white"
        android:textSize="@dimen/company_title_text_size" />

    <TextView
        android:id="@+id/values_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TimeZone: "
        android:textColor="@color/kinokuniya_color"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtGMTTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/txtCurrentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:context=".MainActivity" />
    </LinearLayout>

    <Spinner
        android:id="@+id/availableID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/timezone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtTimeZoneTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <Button
        android:id="@+id/yourChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back" />

    <TextView
        android:id="@+id/rightstextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/rights"
        android:textSize="@dimen/rights_text_size" />

</TableLayout>