<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.newthinktank.kinokuniya.Home" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginBottom="2sp"
        android:contentDescription="@string/kinokuniya_logo_desc"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/companyTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/kinokuniya_color"
        android:text="@string/company_title"
        android:textColor="@color/white"
        android:textSize="@dimen/company_title_text_size" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp" >

        <TextView
            android:id="@+id/searchLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_label" />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:background="@color/egg_shell"
            android:ems="10"
            android:hint="search..."
            android:inputType="text"
            android:textStyle="italic" />

        <Button
            android:id="@+id/searchButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_button_label"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </TableRow>

    <TextView
        android:id="@+id/empid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Offer Updates:"
        android:textColor="@color/red"
        android:textStyle="italic" />

    <TableRow
        android:id="@+id/TableRow07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ImageView06"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:maxHeight="24dp"
            android:maxWidth="24dp"
            android:src="@drawable/new_stock_bulet" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Our New Fictional books are on Sales." />

    </TableRow>

    <TableRow
        android:id="@+id/TableRow05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ImageView04"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:maxHeight="24dp"
            android:maxWidth="24dp"
            android:src="@drawable/new_stock_bulet" />

        <TextView
            android:id="@+id/humidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Buy 3 Books and get 1 Free." />

    </TableRow>

    <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ImageView03"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:maxHeight="24dp"
            android:maxWidth="24dp"
            android:src="@drawable/new_stock_bulet" />

        <TextView
            android:id="@+id/pressureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Our Kindle Device is now Available." />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/iv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:maxHeight="24dp"
            android:maxWidth="24dp"
            android:src="@drawable/new_stock_bulet" />

        <TextView
            android:id="@+id/values_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Kindle Reader for 8,000 RM." />

    </TableRow>

    <TableRow
        android:id="@+id/TableRow03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/ImageView02"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:maxHeight="24dp"
            android:maxWidth="24dp"
            android:src="@drawable/new_stock_bulet" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Get our member card for discounts." />

    </TableRow>

            <TableRow
                android:id="@+id/TableRow02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/ImageView01"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:maxHeight="24dp"
                    android:maxWidth="24dp"
                    android:src="@drawable/new_stock_bulet" />

                <TextView
                    android:id="@+id/salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="Mark Ville at  Kinokuniya for Book Signing." />

            </TableRow>

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/more"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/more_option" />

        <Button
            android:id="@+id/menu"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login" />
    </TableRow>

    <TextView
        android:id="@+id/rightstextView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:text="@string/rights"
        android:textSize="@dimen/rights_text_size" />

</TableLayout>