<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.newthinktank.kinokuniya.EmailHR" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginBottom="2sp"
        android:contentDescription="@string/kinokuniya_logo_desc"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/companyTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/kinokuniya_color"
        android:text="@string/company_title"
        android:textColor="@color/white"
        android:textSize="@dimen/company_title_text_size" />

    <TextView
        android:id="@+id/values_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email Department:"
        android:textColor="@color/kinokuniya_color"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Note : Employee ID will be sent along."
        android:textStyle="italic" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/resutlTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Message : "
            android:textColor="@color/kinokuniya_color"
            android:textStyle="bold" />

    </TableRow>

    <EditText
        android:id="@+id/message"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="Message ..."
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white" />

  <TableRow
        android:id="@+id/TableRow09"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="4sp" >

        <Button
            android:id="@+id/more"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Send " />

        <Button
            android:id="@+id/menu_"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Menu" />
    </TableRow>


    <TextView
        android:id="@+id/rightstextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/rights"
        android:textSize="@dimen/rights_text_size" />

</TableLayout>